cocoa: don't draw focus rings over the URL scheme in the location bar

The security state decoration looks like this:

  Secure |

The divider is included in the bounds, and then the location bar text is placed
just after this decoration; because of that, the focus ring on the security
state decoration (which is exterior to the decoration, like Cocoa focus rings
usually are) draws over the top of the start of the location bar text. This
change:

1) Introduces LocationBarDecoration::GetRealFocusRingBounds() to allow each
   decoration to control its focus ring bounds if it needs to
2) Overrides that method in SecurityStateBubbleDecoration to inset the focus
   ring on the right side

BUG=715909

Review-Url: https://codereview.chromium.org/2847903003
Cr-Commit-Position: refs/heads/master@{#468096}

Former-commit-id: 7d0f29cf86073f026098badc2dfe6ee7a7520b65